# CarGui

./: CMakeLists.txt  README.md  carGui.pro  images.json  main.cpp  main.qml  mainwindow.cpp  mainwindow.ui
audiowindow/: audiowindow.cpp  audiowindow.h
build-carGui-Desktop_Qt_5_10_1_GCC_64bit-Debug/: Makefile  carGui  qrc_qml.cpp
build-carGui-raspberrypi-Debug/: Makefile  carGui  carGui.debug  qrc_qml.cpp
carGui/: audio.qml  carGui.pro  main.qml  qml.qrc
mainwindow/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
